# option-result-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/option_result/: Error.hpp  option_result.hpp
lib/option_result/Error/: Error.hpp  Error.inl
lib/option_result/Exception/: BaseException.cpp  BaseException.hpp
lib/option_result/Option/: Option.hpp  Option.inl
lib/option_result/Reference/: Reference.hpp
lib/option_result/Result/: Result.hpp  Result.inl
tests/0-Other/: 0-Reference.cpp
tests/1-Option/: 0-None.cpp  1-Some.cpp
tests/2-Result/: 0-Ok.cpp  1-Error.cpp
tests/3-Conversion/: 0-Option.cpp  1-Result.cpp
tests/4-Error/: 0-Error.cpp
